<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_general">
        
        <ListPreference
            app:key="app_language"
            app:title="@string/settings_language"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="vi" />

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/settings_dark_mode"
            app:summary="@string/settings_dark_mode_summary"
            app:defaultValue="false" />

        <ListPreference
            app:key="font_size"
            app:title="@string/settings_font_size"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/font_size_entries"
            app:entryValues="@array/font_size_values"
            app:defaultValue="medium" />
            
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_data">
        <Preference
            app:key="clear_cache"
            app:title="@string/settings_clear_cache"
            app:summary="0.0 KB" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_about">
        <Preference
            app:key="app_version"
            app:title="@string/settings_app_version"
            app:summary="1.0.0" />
            
        <Preference
            app:key="privacy_policy"
            app:title="@string/settings_privacy_policy" />
            
        <Preference
            app:key="terms_of_service"
            app:title="@string/settings_terms_of_service" />
    </PreferenceCategory>

</PreferenceScreen>
