<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_courses"
            android:icon="@drawable/ic_courses"
            android:title="@string/menu_my_courses" />
            
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_wishlist"
            app:actionLayout="@layout/layout_menu_badge" />
            
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_download"
            android:title="@string/menu_downloads" />
            
        <item
            android:id="@+id/nav_certificates"
            android:icon="@drawable/ic_certificate"
            android:title="@string/menu_certificates" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_help_support"
                android:icon="@drawable/ic_book"
                android:title="@string/menu_help_support" />
                
            <item
                android:id="@+id/nav_rate_app"
                android:icon="@drawable/ic_star"
                android:title="@string/menu_rate_app" />
                
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
                
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
